--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ dist
 dist-ssr
 *.local
 
+# Environment variables (중요!)
+.env
+.env.*
+
+# Bun lock file
+bun.lockb
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
